Fixed Scroll Overflow

--- a/style.css
+++ b/style.css
@@ -7,6 +7,10 @@
 	font-family: 'Roboto', sans-serif;
 }
 
+body {
+	overflow-x: hidden;
+}
+
 html {
 	scroll-behavior: smooth;
 }
@@ -1002,9 +1006,13 @@ footer {
 }
 
 /* Small phones, tablets, large smart phones */
-@media (max-width: 768px) {
-	.title{
-		font-size: 80px;
+@media (max-width: 764px) {
+	.title {
+		display: none;
+	}
+	.mobile__title{
+		display: flex;
+		font-size: 60px;
 	}
 	.header__para {
 		font-size: 20px;
